<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/bar_action_bg"
    android:paddingStart="@dimen/activity_horz_margin"
    android:paddingEnd="@dimen/activity_horz_margin"
    android:paddingTop="48dp"
    android:paddingBottom="48dp">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TableRow>

            <TextView
                style="@style/AboutLabel"
                android:text="@string/about_dev_label"
                android:padding="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/About"
                android:id="@+id/tv_dev"
                android:text="@string/about_dev"
                android:padding="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </TableRow>

        <TableRow>

            <TextView
                style="@style/AboutLabel"
                android:text="@string/about_copyright_label"
                android:padding="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/About"
                android:id="@+id/tv_copyright"
                android:padding="8dp"
                android:text="@string/about_copyright"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </TableRow>

        <TableRow>

            <TextView
                style="@style/AboutLabel"
                android:text="@string/about_site_label"
                android:padding="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/About"
                android:id="@+id/tv_site"
                android:padding="8dp"
                android:text="@string/about_site"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </TableRow>

    </TableLayout>

</FrameLayout>